// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayOfMonthPicker should display a date of the month 1`] = `
<div
  className="tribe-editor__day-of-month-picker"
>
  <div
    className="css-10nd86i tribe-editor__select tribe-editor__day-of-month-picker__day-of-month-select"
    onKeyDown={[Function]}
  >
    <div
      className="css-vj8t7z tribe-editor__select__control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--has-value"
      >
        <div
          className="css-xp4uvy tribe-editor__select__single-value"
        >
          5
        </div>
        <input
          className="css-14uuagi"
          id="react-select-6-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="css-1wy0on6 tribe-editor__select__indicators"
      >
        <div
          aria-hidden="true"
          className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <span
            className="tribe-editor__select__dropdown-indicator"
          >
            arrow-down
          </span>
        </div>
      </div>
    </div>
  </div>
  <span>
    of the month
  </span>
</div>
`;

exports[`DayOfMonthPicker should display a different weekday 1`] = `
<div
  className="tribe-editor__day-of-month-picker"
>
  <div
    className="css-10nd86i tribe-editor__select tribe-editor__day-of-month-picker__day-of-month-select"
    onKeyDown={[Function]}
  >
    <div
      className="css-vj8t7z tribe-editor__select__control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--has-value"
      >
        <div
          className="css-xp4uvy tribe-editor__select__single-value"
        >
          First
        </div>
        <input
          className="css-14uuagi"
          id="react-select-4-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="css-1wy0on6 tribe-editor__select__indicators"
      >
        <div
          aria-hidden="true"
          className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <span
            className="tribe-editor__select__dropdown-indicator"
          >
            arrow-down
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-10nd86i tribe-editor__select tribe-editor__day-of-month-picker__week-day-select"
    onKeyDown={[Function]}
  >
    <div
      className="css-vj8t7z tribe-editor__select__control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--has-value"
      >
        <div
          className="css-xp4uvy tribe-editor__select__single-value"
        >
          Saturday
        </div>
        <input
          className="css-14uuagi"
          id="react-select-5-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="css-1wy0on6 tribe-editor__select__indicators"
      >
        <div
          aria-hidden="true"
          className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <span
            className="tribe-editor__select__dropdown-indicator"
          >
            arrow-down
          </span>
        </div>
      </div>
    </div>
  </div>
  <span>
    of the month
  </span>
</div>
`;

exports[`DayOfMonthPicker should render component 1`] = `
<div
  className="tribe-editor__day-of-month-picker"
>
  <div
    className="css-10nd86i tribe-editor__select tribe-editor__day-of-month-picker__day-of-month-select"
    onKeyDown={[Function]}
  >
    <div
      className="css-vj8t7z tribe-editor__select__control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--has-value"
      >
        <div
          className="css-xp4uvy tribe-editor__select__single-value"
        >
          First
        </div>
        <input
          className="css-14uuagi"
          id="react-select-2-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="css-1wy0on6 tribe-editor__select__indicators"
      >
        <div
          aria-hidden="true"
          className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <span
            className="tribe-editor__select__dropdown-indicator"
          >
            arrow-down
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="css-10nd86i tribe-editor__select tribe-editor__day-of-month-picker__week-day-select"
    onKeyDown={[Function]}
  >
    <div
      className="css-vj8t7z tribe-editor__select__control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="css-1hwfws3 tribe-editor__select__value-container tribe-editor__select__value-container--has-value"
      >
        <div
          className="css-xp4uvy tribe-editor__select__single-value"
        >
          Monday
        </div>
        <input
          className="css-14uuagi"
          id="react-select-3-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="css-1wy0on6 tribe-editor__select__indicators"
      >
        <div
          aria-hidden="true"
          className="css-1ep9fjw tribe-editor__select__indicator tribe-editor__select__dropdown-indicator"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <span
            className="tribe-editor__select__dropdown-indicator"
          >
            arrow-down
          </span>
        </div>
      </div>
    </div>
  </div>
  <span>
    of the month
  </span>
</div>
`;
